[package]
name = "nucliadb_relations2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
derive_builder = "0.12.0"
itertools = "0.10.5"
deunicode = "1.3.2"
regex = "1.7.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
tempfile = "3"
rand = "0.8.4"
ring = "0.16.20"
data-encoding = "2.3.2"
tantivy = { git = "https://github.com/nuclia/tantivy.git", branch = "original-17" }

nucliadb_core = { path = "../nucliadb_core" }
nucliadb_procs = { path = "../nucliadb_procs" }

[dev-dependencies]
lazy_static = "1.4.0"
