[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nucliadb_sdk"
version = "6.4.0"
license = "Apache-2.0"
description = "NucliaDB SDK"
authors = [{ name = "Nuclia", email = "nucliadb@nuclia.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.9, <4"
dependencies = [
    "httpx",
    "orjson",
    "pydantic>=2.6",
    "nuclia-models>=0.24.2",
    # automatically bumped during release
    "nucliadb-models",
]

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"

[tool.pytest.ini_options]
asyncio_mode = "auto"
