[package]
name = "nucliadb_shard_balancer"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
nucliadb_protos = { path = "../nucliadb_protos/rust" }

bounded-integer = { version = "0.5.3", features = ["types", "std"] }
eyre = "0.6.8"
color-eyre = "0.6.2"
clap = { version = "4.1.4", features = ["derive", "env"] }
tokio = { version = "1.25.0", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
thiserror = "1.0.38"
tonic = "0.7.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "smallvec"] }
url = "2.3.1"
futures = "0.3.26"
itertools = "0.10.5"
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"] }
