[package]
name = "nucliadb-swim"
version = "0.1.2"
authors = ['Bosutech S.L. <info@nuclia.com>']
edition = '2021'
description = "Fork of artillery-core SWIM implementation"
repository = "https://github.com/stashify/nucliadb"
homepage = "https://nuclia.com/"
documentation = "https://nuclia.com"
license = "Apache-2.0/MIT"

[dependencies]
thiserror = "1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
rand = "0.8"
mio = { version = "0.7.0", features = ["os-poll", "udp"] }
futures = "0.3.5"
tracing = "0.1"
tokio = { version = "1.7", features = [ "full" ]}
flume = "0.10"

[dev-dependencies]
bincode = "1.3.1"
