[package]
name = "nucliadb_telemetry"
version = "0.1.0"
authors = ["nucliadb <nucliadb@nuclia.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "nucliadb telemetry"
repository = "https://github.com/nuclia/nucliadb"
homepage = "https://nucliadb.io/"
documentation = "https://nucliadb.io/docs/"


[dependencies]
once_cell = "1.8.0"
reqwest = { version = "0.11", default-features=false, features = ["json", "rustls-tls", "blocking"] }
tokio = {version = "1", features = ["full"]}
serde = {version="1", features = ["derive"]}
uuid = { version= "1.1", features = ["v4", "serde"]}
tracing = "0.1"
async-trait = "0.1"
hostname = "0.3"
username = "0.2"
md5 = "0.7"
lazy_static = "1.4.0"