[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nucliadb_utils"
version = "6.7.2"
license = "AGPL-3.0-or-later"
description = "NucliaDB util library"
authors = [ { name = "Nuclia", email = "nucliadb@nuclia.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9, <4"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "aiohttp>=3.9.4",
    "httpx>=0.27.0",
    "prometheus-client>=0.12.0",
    "types-requests>=2.27.7",
    "mmh3>=3.0.0",
    "nats-py[nkeys]>=2.6.0",
    "PyNaCl",
    "pyjwt>=2.4.0",
    "mrflagly>=0.2.9",

    # automatically bumped during release"
    "nucliadb-protos",
    "nucliadb-telemetry",
]

[project.optional-dependencies]
cache = [
    "redis>=4.3.4",
    "orjson>=3.6.7",
]
fastapi = [
    "fastapi>=0.95.2",
    "starlette>=0.21.0",
    "uvicorn",
]
storages = [
    "oauth2client>=4.1.3",
    "aiobotocore>=2.9.0",
    "google-api-python-client>=2.37.0",
    "types-aiofiles>=0.8.3",
    "aiofiles>=0.8.0",
    "backoff>=1.11.1",
    "google-auth>=2.4.1",
    "azure-storage-blob==12.20.0",
    "azure-identity>=1.16.1",
]

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"

[tool.pytest.ini_options]
asyncio_mode = "auto"
