[package]
name = "nucliadb_vectors"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
tempfile = "3"
rand = "0.8.4"
tracing = "0.1.29"
memmap2 = "0.5.3"
fs2 = "0.4.3"
thiserror = "1.0.31"
serde_json = "1.0.82"
nucliadb_core = { path = "../nucliadb_core" }
lazy_static = "1.4.0"
itertools = "0.10.5"

[lib]
name = "nucliadb_vectors"
path = "src/lib.rs"
