[package]
name = "nucliadb_vectors"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
tempfile = "3"
rand = "0.8.4"
memmap2 = "0.5.3"
fs2 = "0.4.3"
thiserror = "1.0.31"
serde_json = "1.0.82"
crossbeam = "0.8.2"
fst = "0.4.7"
bincode = "1.3.3"

nucliadb_core = { path = "../nucliadb_core" }
nucliadb_procs = { path = "../nucliadb_procs" }
bit-set = "0.5.3"
fxhash = "0.2.1"
libc = "0.2.153"
lazy_static = "1.4.0"

[target.'cfg(not(all(target_os="linux",target_arch="aarch64")))'.dependencies]
simsimd = "4.3.1"

[dev-dependencies]
lazy_static = "1.4.0"
rstest = "0.19.0"

[lib]
name = "nucliadb_vectors"
path = "src/lib.rs"
