[package]
name = "vectors_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tempfile = "3"
thiserror = "1.0.31"
serde_json = "1.0.82"
uuid = { version = "1.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
nucliadb_vectors2 = {path= "../nucliadb_vectors2"}
nucliadb_node = {path= "../nucliadb_node"}
nucliadb_protos = { path = "../nucliadb_protos/rust" }
tokio = { version = "1.12.0", features = ["macros",] }
prost-types = "0.10"

[[bin]]
name = "vectors_benchmark"
path = "src/binaries/vectors_benchmark.rs"

[[bin]]
name = "1m_stats"
path = "src/binaries/1m_stats.rs"


[[bin]]
name = "node_stats"
path = "src/binaries/node_stats.rs"