[package]
name = "vectors_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
tempfile = "3"
thiserror = "1.0.31"
serde_json = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.18", features = ["derive"] }
nucliadb_vectors = { path = "../nucliadb_vectors2", package = "nucliadb_vectors2" }
nucliadb_core = { path = "../nucliadb_core" }
lazy_static = "1.4.0"
memory-stats = "1.0.0"
byte-unit = "4.0.19"
reqwest = { version = "0.11.20", features = ["blocking"] }
indicatif = "0.17.6"
tar = "0.4.40"
flate2 = "1.0.27"
base64 = "0.21.4"
kv = { version = "0.24.0", features = ["json-value"] }

[[bin]]
name = "vectors_benchmark"
path = "src/binaries/vectors_benchmark.rs"

[[bin]]
name = "1m_stats"
path = "src/binaries/1m_stats.rs"

[[bin]]
name = "real_data_benchmark"
path = "src/binaries/real_data_benchmark.rs"
