[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "nidx_binding"
description = "Bindings for nidx (part of nucliadb)"
license = "AGPL-3.0-or-later"
authors = [ { name = "Nuclia", email = "nucliadb@nuclia.com" }]
requires-python = ">=3.10, <4"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "6.10.0"

[project.urls]
Homepage = "https://nuclia.com"
Repository = "https://github.com/nuclia/nucliadb"

[tool.maturin]
features = ["pyo3/extension-module"]
